# roc_portal_web_dashboard

./: .env.example  .gitignore  CLAUDE.md  PRD.md  PROGRESS.md  README.md  docker-compose.yml  rebuild-css.sh
app/: Dockerfile  package.json  pyproject.toml  tailwind.config.js
app/alembic/: env.py  script.py.mako
app/alembic/versions/: 24dcbfec234c_add_departments_html_embed_report_access.py  8171f449f5a5_initial_schema.py  9d20d172cf80_add_public_url_to_reports.py
app/src/: config.py  db.py  deps.py  i18n.py  main.py  seed.py
app/src/api/: auth.py  export.py  me.py  reports.py
app/src/api/admin/: config.py  departments.py  permissions.py  reports.py  roles.py  users.py
app/src/core/: audit.py  powerbi.py  rbac.py  security.py  site_config.py  tenant.py
app/src/locales/: en.json  id.json
app/src/models/: __init__.py  audit.py  base.py  config.py  department.py  menu.py  report.py  tenant.py  user.py
app/src/schemas/: auth.py  config.py  department.py  menu.py  report.py  role.py  user.py
app/src/static/src/css/: app.css
app/src/templates/: base.html  dashboard.html  index.html  layout.html
app/src/templates/admin/: config.html  departments.html  reports.html  roles.html  users.html
app/src/templates/auth/: forgot_password.html  login.html  reset_password.html
app/src/templates/me/: profile.html
app/src/templates/viewer/: report.html
app/src/views/: _context.py  _nav.py  auth.py  dashboard.py  me.py  reports.py
app/src/views/admin/: config.py  departments.py  reports.py  roles.py  users.py
nginx/: Dockerfile  nginx.conf  proxy_params.conf
